--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="tr">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y0BFWM4B03"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y0BFWM4B03');
+</script>
 <title>Anatomi Quiz Pro</title>
 <style>
   body { font-family: Arial, sans-serif; background:#f0f0f0; padding:20px; margin:0; }
@@ -300,3 +309,4 @@ let k=typeof globalThis!=='undefined'?globalThis:typeof window!=='undefined'?win
 </script>
 </body>
 </html>
+
